# BlockAssemblyAgentic

./: .gitignore  README.md  api_key.txt  block.py  demo.ipynb  function.py  generate_obj_list.py  main_design_obj.py  neck.urdf  obj_list.csv  octopus.urdf  pyproject.toml  requirements.txt  structure.py  tendon_driven.cpp  toolset.py  toolset_joint.py  vis_generated_design.py
agent/: __init__.py  coder.py  designer.py  llm.py  observer.py  rdm.py
configs/: __init__.py  config.py  joint_def.yaml  simulated_blocks_joint.json
configs/definitions/: large-joint.yaml  medium-joint.yaml
data/: simulated_blocks.json  simulated_blocks_joint.json  soft_block_box.py  soft_block_capsule.py
experiments/definitions/: bb_neck.yaml  bb_tail.yaml  bb_tentacle.yaml
experiments/trajectory/: giraffe_traj.yaml
exps/: llm_comparision_exp.py
notebooks/: demo.ipynb
prompt/: __init__.py  coder_prompt_v1.py  coder_prompt_v3.py  observer_prompt_v1.py  prompt.py
prompt/skill_prompt/: __init__.py  describe.py  info.py  order.py  plan.py  position.py  rating.py  stability.py
pybullet_utils/: pybullet_axes.py
soft-examples/: octopus.py  octopus.urdf
somo/examples/: finger.urdf
somo/somo/: create_cmassembly_urdf.py  sm_continuum_manipulator.py  sm_link_definition.py
src/: pipeline.py  toolset.py
src/agent/: __init__.py  block_design_mas.py  coder.py  designer.py  llm.py  observer.py  obsever.py
src/genesis/: block_available.py  place_block_in_json.py  (+1 more)
structure/: __init__.py  assembly.py  block.py  structure.py
utils/: gpt_client.py  urdf2mesh.py  utils.py
(+55 files in other folders)
